feat: デプロイ調整

--- a/.github/workflows/main_functionapp-demo-premium.yml
+++ b/.github/workflows/main_functionapp-demo-premium.yml
@@ -64,9 +64,7 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_B2D58E7A8DF74BA79210807A8BED96C1 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_658847C84ACF456B88466E80D90A4CC1 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_8BA9B1F08B41471FB7B8730DA171B8B5 }}
+          creds: ${{ secrets.AZURE_CREDENTIALS_JSON }}
 
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
@@ -75,4 +73,3 @@ jobs:
           app-name: 'functionapp-demo-premium'
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-          
