feat: オプション調整

--- a/.github/workflows/main_functionapp-demo-premium.yml
+++ b/.github/workflows/main_functionapp-demo-premium.yml
@@ -73,3 +73,4 @@ jobs:
           app-name: 'functionapp-demo-premium'
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+          respect-funcignore: true
