--- a/.github/workflows/main_functionapp-demo-premium.yml
+++ b/.github/workflows/main_functionapp-demo-premium.yml
@@ -34,6 +34,9 @@ jobs:
           npm run test --if-present
           popd
 
+      - name: 'ls -a'
+        run: ls -a
+
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
